--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
       height: 50%;
     }
 
+    #dialog {
+      width: 50%;
+      height: 50%;
+    }
+
+    #dialogMap {
+      width: 100%;
+      height: 100%;
+    }
+
     /* 
  * Optional: Makes the sample page fill the window. 
  */
